--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,8 @@
 @tailwind base;
-@tailwind components;
 @tailwind utilities;
+@tailwind components;
 * {
-  padding: 0%;
-  margin: 0;
+  padding: 0;
+  margin: 0px;
+  
 }
